--------------------------------------------------------------------------------------------------
Release notes version 1.9.6_beta : Enhancements, modifications and corrected bugs since version 1.9.5 :
--------------------------------------------------------------------------------------------------
03/03/25 (TRUST) New feature  : Add Lata_2_CGNS interpret that can be used to convert lata files into CGNS ones
03/03/25 (TRUST) New feature  : Lata_2_MED & LataLoader can be applied on polyhedral meshes
03/03/25 (TRUST) GPU          : Parallel run with number of MPI processes greater than GPU works again though less efficient. Useful for non regression on multi-GPU node
03/03/25 (TRUST) Keyword      : Algebric Multigrid preconditioned solver keyword which select a good choice for CPU/GPU/MPI: solver AMG GCP { rtol|atol value [impr] }
03/03/25 (TRUST) GPU          : Lot of performance improvements in VEF kernels and more VEF features available (y_plus field, source terms for dilatable fluid, time-dependent boundary conditions)
03/03/25 (TRUST) GPU          : PETSc updated from 3.20 to 3.22 to benefit from GPU solver improvements (Hypre, STRUMPACK)
03/03/25 (TRUST) GPU          : Ada Nvidia architecture card with compute capability 89 (e.g. RTX 4070) and gfx1100 AMD cards supported
03/03/25 (TRUST) GPU          : A100 partition is supported on JeanZay, A100 and H100 partitions on orcus
03/03/25 (TRUST) GPU          : Performance regression on adastra -MI250 AMD) fixed by using HIP backend for Kokkos
03/03/25 (TRUST) GPU          : Parser and several Champ_Generiques (Reduction_0D, Transformation, Interpolated) ported
03/03/25 (TRUST) GPU          : Configure option -openmp to build GPU code is refused as OpenMP target instructions are removed from the code and as it rely only on Kokkos framework (updated from 4.2 to 4.5)
03/03/25 (TRUST) MPI          : Configure option -force_provided_openmpi now use OpenMPI 4.1.6 and -force_latest_openmpi now use OpenMPI 5.0.5