@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------------------------
 Release notes version 1.9.6_beta : Enhancements, modifications and corrected bugs since version 1.9.5 :
 --------------------------------------------------------------------------------------------------
+05/03/25 (TRUST) Minor change : Postprocessing: 'dt_post' and 'nb_dt_post' can now be used outside the 'fields' part of the postprocessing block. 
 03/03/25 (TRUST) New feature  : Add Lata_2_CGNS interpret that can be used to convert lata files into CGNS ones
 03/03/25 (TRUST) New feature  : Lata_2_MED & LataLoader can be applied on polyhedral meshes
 03/03/25 (TRUST) GPU          : Parallel run with number of MPI processes greater than GPU works again though less efficient. Useful for non regression on multi-GPU node
